--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
    "version": "1.0.0",
    "description": "",
    "main": "main.js",
+   "type": "module",
+   "bin": "main.js",
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1"
    },
@@ -10,6 +12,10 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
-      "chalk": "^5.3.0"
+      "chalk": "^5.3.0",
+      "inquirer": "^9.2.21"
+   },
+   "devDependencies": {
+      "@types/inquirer": "^9.0.7"
    }
 }
